...
    func showAlert(for error: Error) {
        DispatchQueue.main.async { [weak self] in
            guard let self else { return }
            let alertModel = AlertModel(
                title: "Ошибка",
                message: error.localizedDescription == "The operation couldn’t be completed. ( rate limit exceeded)" ?
                    "Rate Limit Exceeded" : "Не удалось изменить лайк: \(error.localizedDescription)",
                buttonText: "OK"
            ) { }
            AlertPresenter.showAlert(model: alertModel, vc: self)
        }
    }
    
    // MARK: - Private Methods
...
